syntax = "proto3";
package poktroll.gateway;

option go_package = "github.com/pokt-network/poktroll/proto/types/gateway";

import "amino/amino.proto";
import "gogoproto/gogo.proto";

import "poktroll/gateway/params.proto";
import "poktroll/gateway/gateway.proto";

// GenesisState defines the gateway module's genesis state.
message GenesisState {
  // params defines all the parameters of the module.
  Params  params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
  repeated Gateway gateway_list = 2 [(gogoproto.nullable) = false] ;
}

